--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "next lint",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
@@ -34,13 +34,13 @@
     "lucide-react": "^0.545.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
-    "next-sanity": "^11.4.2",
+    "next-sanity": "^11.6.3",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
-    "sanity": "^4.10.2",
+    "sanity": "^4.12.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
   },
